--- a/scss/works.scss
+++ b/scss/works.scss
@@ -120,34 +120,34 @@
       }
       &.first {
         grid-column: span 2;
-        background-image: url("/assets/image-35@3x.png");
+        background-image: url("assets/image-35@3x.png");
         background-size: cover;
         background-position: center center;
       }
       &.second {
         grid-row: span 2;
-        background-image: url("/assets/image-23@3x.png");
+        background-image: url("assets/image-23@3x.png");
         background-size: cover;
         background-position: center center;
       }
       &.third {
-        background-image: url("/assets/41@3x.png");
+        background-image: url("assets/41@3x.png");
         background-size: cover;
         background-position: center center;
       }
       &.forth {
-        background-image: url("/assets/image-41@3x.png");
+        background-image: url("assets/image-41@3x.png");
         background-size: cover;
         background-position: center center;
       }
       &.fifth {
         grid-column: span 2;
-        background-image: url("/assets/image-24@3x.png");
+        background-image: url("assets/image-24@3x.png");
         background-size: cover;
         background-position: center center;
       }
       &.sixth {
-        background-image: url("/assets/image-40@3x.png");
+        background-image: url("assets/image-40@3x.png");
         background-size: cover;
         background-position: center center;
       }
