fix bugs with images

--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,7 @@
 
 #home {
   height: 500px;
-  background-image: url("/assets/photo-1420136663600-498-c-31-ee-1-c-97@3x.png");
+  background-image: url("../assets/photo-1420136663600-498-c-31-ee-1-c-97@3x.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -231,29 +231,29 @@
         margin-top: 26px; }
     #works .gallery .gallery__item.first {
       grid-column: span 2;
-      background-image: url("/assets/image-35@3x.png");
+      background-image: url("../assets/image-35@3x.png");
       background-size: cover;
       background-position: center center; }
     #works .gallery .gallery__item.second {
       grid-row: span 2;
-      background-image: url("/assets/image-23@3x.png");
+      background-image: url("../assets/image-23@3x.png");
       background-size: cover;
       background-position: center center; }
     #works .gallery .gallery__item.third {
-      background-image: url("/assets/41@3x.png");
+      background-image: url("../assets/41@3x.png");
       background-size: cover;
       background-position: center center; }
     #works .gallery .gallery__item.forth {
-      background-image: url("/assets/image-41@3x.png");
+      background-image: url("../assets/image-41@3x.png");
       background-size: cover;
       background-position: center center; }
     #works .gallery .gallery__item.fifth {
       grid-column: span 2;
-      background-image: url("/assets/image-24@3x.png");
+      background-image: url("../assets/image-24@3x.png");
       background-size: cover;
       background-position: center center; }
     #works .gallery .gallery__item.sixth {
-      background-image: url("/assets/image-40@3x.png");
+      background-image: url("../assets/image-40@3x.png");
       background-size: cover;
       background-position: center center; }
 
@@ -337,7 +337,7 @@
     width: 20%; } }
 
 .video {
-  background-image: url("/assets/photo@3x.png");
+  background-image: url("../assets/photo@3x.png");
   width: 100%;
   height: 500px;
   background-size: cover;
