--- a/scss/video.scss
+++ b/scss/video.scss
@@ -1,5 +1,5 @@
 .video {
-  background-image: url("assets/photo@3x.png");
+  background-image: url("../assets/photo@3x.png");
   width: 100%;
   height: 500px;
   background-size: cover;
